fixed header so is always visible

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
 .content {
-  position: absolute;
+  position: fixed;
   top: 90px;
   left: 0;
   right: 0;
   bottom: 0;
+  overflow-y: auto;
 }
